Updated Swagger file to latitude, longitude and time from string to long. Added check for valid ID in getRacingTrack/{id}.
